# modern-package

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  api.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  releases.html  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: docs.yaml  pr_tests.yaml  release.yaml  tests.yaml
_autosummary/: package.add.html  package.html  package.math.add.html  package.math.exponentiate.html  package.math.html  package.math.multiply.html  package.math.subtract.html
_modules/: index.html  package.html
_modules/package/: math.html
_sources/: index.rst.txt  releases.rst.txt
_sources/_autosummary/: package.add.rst.txt  package.math.add.rst.txt  package.math.exponentiate.rst.txt  package.math.multiply.rst.txt  package.math.rst.txt  package.math.subtract.rst.txt  package.rst.txt
docs/: Makefile  api.rst  conf.py  install.rst
docs/_templates/: footer.html  releases-template.rst
package/: __init__.py  math.py
reports/coverage/: coverage.xml
reports/coverage/coverage-html/: d_27b1b82e91347315___init___py.html  d_27b1b82e91347315_math_py.html  index.html  status.json
reports/junit/: junit.xml  report.html
tests/: test_add.py  test_math.py
