[tool.poetry]
name = "package"
version = "0.4.0"
description = "Just a package."
license = "MIT"
authors = ["Federico Trifoglio <federico.trifoglio@assemblyglobal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
commitizen = {version = "^2.42.1", python = "^3.11"}
pre-commit = {version = "^3.1.0", python = "^3.11"}
black = {version = "^23.1.0", python = "^3.11"}
isort = {version = "^5.12.0", python = "^3.11"}
flake8 = {version = "^6.0.0", python = "^3.11"}
pydocstyle = {version = "^6.3.0", python = "^3.11"}
mypy = {version = "^1.0.1", python = "^3.11"}
toml = {version = "^0.10.2", python = "^3.11"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = {version = "^7.2.1", python = "^3.11"}
pytest-cov = {version = "^4.0.0", python = "^3.11"}
pytest-html = {version = "^3.2.0", python = "^3.11"}
tox = {version = "^4.4.6", python = "^3.11"}
genbadge = {extras = ["coverage", "tests"], version = "^1.1.0", python = "^3.11"}

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = {version = "^6.1.3", python = "^3.11"}
sphinx-autodoc-typehints = {version = "^1.22", python = "^3.11"}
sphinxcontrib-confluencebuilder = {version = "^2.0.0", python = "^3.11"}
sphinx-rtd-theme = {version = "^1.2.0", python = "^3.11"}
Sphinx-Substitution-Extensions = {version = "^2022.2.16", python = "^3.11"}

[tool.poetry.group.docs]
optional = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
follow_imports = "silent"
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "_pytest.*",
]
ignore_missing_imports = true

[tool.pydocstyle]
inherit = false
match = "(?!tests)"

[tool.pytest.ini_options]
testpaths = [
    "./tests"
]
filterwarnings = [
    "ignore:.*pkg_resources\\.declare_namespace.*:DeprecationWarning",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.0"
tag_format = "$version"
version_files = [
    "package/__init__.py",
    "pyproject.toml:version"
]
